# GN-Lime

./: .gitignore  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES  manifest.json
.github/: pull_request_template.md
.github/workflows/: app-release-signed.yml  pluvia-pr-check.yml  tagged-release.yml
app/: build.gradle.kts
app/schemas/app.gamenative.db.PluviaDatabase/: 14.json  15.json  16.json  17.json  18.json  19.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fexcore_env_vars.json  redirect.tzst
app/src/main/assets/fexcore/: fexcore-2604.tzst
app/src/main/assets/graphics_driver/: turnip-25.2.0.tzst  turnip-25.3.0.tzst  vortek-2.0.tzst  vortek-2.1.tzst
app/src/main/assets/wincomponents/: README_openal.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/extras/: evshim.c
app/src/main/cpp/extras/SDL2/: SDL.h
app/src/main/cpp/patchelf/: CMakeLists.txt
app/src/main/cpp/winlator/: native_handle.h  xconnector_epoll.c
app/src/main/cpp/xconnectorpatch/: CMakeLists.txt  xconnectorpatch.c
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
keyvalues/: Blue Revolver.txt  Cult of the Lamb.txt
scripts/: sync-upstream.sh
tools/: convert-wcp-to-tzst.sh
tools/libredirect/: README.md
tools/lime-asset-patcher/: README.md  patch_assets.py
ubuntufs/: build.gradle.kts
(+228 files in other folders)
